2 - updating index and README files

--- a/2 - Front-End Build Tools Comparison/index.html
+++ b/2 - Front-End Build Tools Comparison/index.html
@@ -21,16 +21,8 @@
     
     <div class="content container">
         <div class="inner">
-            <ol class="module-list">
-                <li>
-                    <a href="1-jquery-mobile/">jQuery Mobile</a><span>06/09/2014 - 06/15/2014</span>
-                    <p>A basic "Home / Products / Contact" website that uses three separate single-page templates. Page transitions do not work with this approach, but it is a more modular way to write the pages (as opposed to a single HTML file that includes all of the pages).</p>
-                </li>
-                <li>
-                    <a href="2-build-tools/">Front-End Build Tool Comparison</a><span>06/16/2014 - 06/22/2014</span>
-                    <p>Here I dive in and try out a number of front-end build tools, and compare them. The build tools in question are Assemble (Grunt), Jekyllrb (Yeoman generator with Jekyll), and Yo Webapp (Yeoman generator).</p>
-                </li>
-            </ol>
+            <h2>A Comparison of Front-End Build Tools</h2>
+            <a href="../index.html">back to the index</a>
         </div>
     </div>
 </body>
